.k8s/resources/service.yml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app: reviews
    app.kubernetes.io/component: reviews
    app.kubernetes.io/instance: reviews
  name: reviews
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8778-tcp
    port: 8778
    protocol: TCP
    targetPort: 8778
  selector:
    deploymentconfig: reviews
  sessionAffinity: None
  type: ClusterIP
