.k8s/resources/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: reviews
    app.kubernetes.io/component: reviews
    app.kubernetes.io/instance: reviews
  name: reviews
spec:
  port:
    targetPort: 8080-tcp
  subdomain: ""
  to:
    kind: Service
    name: reviews
    weight: 100
  wildcardPolicy: None
